@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.2-13
-Date: 2018-03-19
+Date: 2018-03-22
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
